[project]
name = "manof"
requires-python = ">=3.7,<3.10"
version = "0.1.2"
authors = [
    {name = "LiranBG", email = "liran_ben_gida@mckinsey.com"},
]

[tool.setuptools]
py-modules = []

# please keep this to a minimum - defaults are good
[tool.black]
exclude = '''
^/(   # anchor to the root
  (   # exclude these directories
    \.git
    | \.venv
    | venv
  )/
)
'''
